<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
            android:key="pref_cat_gen"
            android:title="@string/pref_cat_gen" >
        <CheckBoxPreference
                android:defaultValue="true"
                android:key="pref_notif_only"
                android:summary="@string/pref_notif_only_summ"
                android:title="@string/pref_notif_only" />
        <CheckBoxPreference 
			    android:key="pref_notif_unicode"
			    android:title="@string/pref_notif_unicode"
			    android:defaultValue="true"
			    android:summary="@string/pref_notif_unicode_summ" />
        <ListPreference 
            	android:dependency="pref_notif_unicode"
			    android:key="pref_notif_timeout"
			    android:title="@string/pref_notif_timeout"
			    android:defaultValue="10000"
			    android:entries="@array/pref_notif_timeout"
			    android:entryValues="@array/pref_notif_timeout_values"/>
        <Preference
            	android:dependency="pref_notif_unicode"
                android:title="@string/pref_watchapp"
                android:key="pref_watchapp"
                android:summary="@string/pref_watchapp_summ" />
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_fetch_notif_extras"
                android:summary="@string/pref_fetch_notif_extras_summ"
                android:title="@string/pref_fetch_notif_extras" />
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_no_ongoing_notif"
                android:summary="@string/pref_no_ongoing_notif_summ"
                android:title="@string/pref_no_ongoing_notif" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_cat_dnd"
        android:title="@string/pref_cat_dnd" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_notif_screen_on"
            android:summary="@string/pref_notif_screen_on_summ"
            android:title="@string/pref_notif_screen_on" />
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_dnd_time_enabled"
                android:summary="@string/pref_dnd_time_enabled_summ"
                android:title="@string/pref_dnd_time_enabled" />
            <com.dattasmoon.pebble.plugin.TimePreference
                android:key="pref_dnd_time_before"
                android:dependency="pref_dnd_time_enabled"
                android:summary="@string/pref_dnd_time_before_summ"
                android:title="@string/pref_dnd_time_before"
                android:defaultValue="06:00" />
            <com.dattasmoon.pebble.plugin.TimePreference
                android:key="pref_dnd_time_after"
                android:dependency="pref_dnd_time_enabled"
                android:summary="@string/pref_dnd_time_after_summ"
                android:title="@string/pref_dnd_time_after"
                android:defaultValue="21:00" />
            
    </PreferenceCategory><PreferenceCategory android:title="@string/pref_call_cat" android:key="pref_call_opt" android:summary="@string/pref_call_cat_summ">
        <Preference android:key="pref_install_call_app" android:summary="@string/pref_call_app_summ" android:title="@string/pref_call_app"/><CheckBoxPreference android:defaultValue="true" android:summary="@string/pref_call_enable_summ" android:key="pref_call_enable" android:title="@string/pref_call_enable"/>
        <CheckBoxPreference android:summary="@string/pref_call_quiet_summ" android:key="pref_call_quiet" android:title="@string/pref_call_quiet"/>
        <EditTextPreference android:title="@string/pref_call_sms_short" android:summary="@string/pref_call_sms_short_summ" android:key="pref_call_sms_short" android:defaultValue="@string/pref_call_sms_short_default"/>
        <EditTextPreference android:title="@string/pref_call_sms_long" android:summary="@string/pref_call_sms_long_summ" android:key="pref_call_sms_long" android:defaultValue="@string/pref_call_sms_long_default"/>
        
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/pref_about"
            android:key="About" >
        <Preference
                android:title="@string/pref_donate"
                android:key="pref_donate"
                android:summary="@string/pref_donate_summ" />
    </PreferenceCategory>

</PreferenceScreen>
