<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/sendTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_pebble_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/sendText"
        android:layout_width="match_parent"
        android:layout_height="131dp"
        android:layout_gravity="fill_vertical"
        android:ems="10"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:minLines="15"
        android:selectAllOnFocus="true"
        android:text="@string/test_pebble_body" />

    <Button
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/test_pebble_send" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_pebble_phone_number"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/testPhoneNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_pebble_phone_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/testName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/butTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_pebble_phone_test" />

</LinearLayout>